--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1253,7 +1253,7 @@
 				-ms-transition-delay: 0.25s;
 				transition-delay: 0.25s;
 				padding: 3rem 2rem;
-				max-height: 40rem;
+				/*max-height: 40rem;*/
 				overflow: hidden;
 			}
 
